logger 추가 게시판 작성,  list 기본 구조 base 작성

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cookie_jar: ^3.0.0
   dio_cookie_manager: ^2.0.0
   flutter_secure_storage: ^9.0.0
+  logger: ^2.0.2+1
 
 dev_dependencies:
   flutter_test:
