--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,8 @@ dependencies:
   dio: ^5.3.3
   flutter_secure_storage: ^9.0.0
   logger: ^2.0.2+1
-
+  image_picker: ^1.0.6
+  flutter_image_compress : ^2.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
