--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   logger: ^2.0.2+1
   image_picker: ^1.0.6
   flutter_image_compress : ^2.1.0
+  http_parser: ^4.0.2
+  path: ^1.8.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
